--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
   "rules": {
     "import/extensions": ["error", "never"],
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx", "jsx"] }],
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": ["vite.config.ts", "**/*.test.ts", "**/*.test.tsx"] }
