--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "preview": "vite preview",
     "format": "prettier --ignore-unknown .",
     "format:fix": "prettier --write --ignore-unknown .",
-    "lint": "tsc && eslint \"./**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "tsc && eslint --fix \"./**/*.{js,jsx,ts,tsx}\"",
+    "lint": "tsc && eslint \"./**/*.{ts,tsx}\"",
+    "lint:fix": "tsc && eslint --fix \"./**/*.{ts,tsx}\"",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": "tsc-files -p tsconfig.eslint.json",
-    "**/*.{js,jsx,ts,tsx}": [
+    "**/*.{ts,tsx}": [
       "eslint --fix",
+      "tsc-files -p tsconfig.eslint.json",
       "prettier --write"
     ],
-    "!(**/*.{js,jsx,ts,tsx})": "prettier --write --ignore-unknown"
+    "!(**/*.{ts,tsx})": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -46,6 +46,7 @@
     "prettier": "2.5.1",
     "tsc-files": "^1.1.3",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-checker": "^0.3.4"
   }
 }
